Fix text wrapping

--- a/ui/modules/mp_mainmenu/mainmenu.css
+++ b/ui/modules/mp_mainmenu/mainmenu.css
@@ -74,7 +74,6 @@ a {
 
 .flex-items:nth-child(2) {
     width: 100%;
-    height: 20%;
     display: block;
     flex-grow: 1;
     flex-shrink: 1;
@@ -158,7 +157,7 @@ a {
     flex: 1 1 0;
     height: 100%;
     width: 20%;
-    margin: 0.5em;
+    margin-left: 0.5em;
     padding: 0.5em;
 }
 
@@ -170,10 +169,10 @@ a {
 .menu-card-content {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-    align-content: flex-start;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 }
 
 @media (max-width: 1245px) {
